<?xml version="1.0"?>
<package format="2">
  <name>sam_collision_detection</name>
  <version>0.0.0</version>
  <description>The sam_collision_detection package</description>

  <maintainer email="mpheng@siix-agt.com">mpheng</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sam_common_shared</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export></export>
</package>