<?xml version="1.0"?>
<package format="2">
  <name>range_to_pointcloud</name>
  <version>0.0.0</version>
  <description>The range_to_pointcloud package</description>

  <maintainer email="mpheng@gmail.com">mpheng</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export></export>
</package>